Bug fix in homepage >> Updated overflow behavior >> to overflow x hidden

--- a/styles/homepage_styles/main_styles/home.css
+++ b/styles/homepage_styles/main_styles/home.css
@@ -20,7 +20,7 @@ body {
   top: 0;
   grid-template-columns: 100%;
   width: 100vw;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 html {
   scroll-behavior: smooth;
